--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
+    "nodemon": "^3.0.2",
     "react": "^18",
     "react-dom": "^18",
     "recoil": "^0.7.7",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "ts-node": "^10.9.2",
     "ws": "^8.15.1"
   },
   "devDependencies": {
