--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "next": "14.0.4",
     "nodemon": "^3.0.2",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "recoil": "^0.7.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
     "ws": "^8.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
