--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "recoil": "^0.7.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
