--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "express": "^4.18.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
