--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.0.4",
     "recoil": "^0.7.7",
     "socket.io": "^4.7.2",
