--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "@recoil/*": ["common/redux/*"],
+      "@recoil/*": ["common/recoil/*"],
       "@/*": ["*"]
     }
   },
