--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-image-file-resizer": "^0.4.8",
     "react-toastify": "^9.1.3",
+    "react-use": "^17.4.3",
     "recoil": "^0.7.7",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
