--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon server/index.ts",
     "dev:client": "ts-node server/index.ts",
-    "build:server": "tsx --project tsconfig.server.json",
+    "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
     "build": "npm-run-all build:*",
     "start": "NODE_ENV=production node build/server/index.js",
