--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
-    "ws": "^8.15.1"
+    "ws": "^8.15.1",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -50,7 +51,6 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
