--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "nodemon": "^3.0.2",
+    "npm-run-all": "^4.1.5",
     "react": "^18",
     "react-colorful": "^5.6.1",
     "react-dom": "^18",
@@ -29,11 +30,10 @@
     "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
-    "ws": "^8.15.1",
-    "npm-run-all": "^4.1.5"
+    "ws": "^8.15.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/node": "17.0.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^18.0.4",
