--- a/package.json
+++ b/package.json
@@ -30,16 +30,14 @@
     "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
-    "ws": "^8.15.1",
-    "@types/express": "^4.17.21",
-    "@types/uuid": "^8.3.4"
+    "ws": "^8.15.1"
   },
   "devDependencies": {
-   
+    "@types/express": "^4.17.21",
     "@types/node": "17.0.4",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^18.0.4",
-
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
     "eslint": "8.2.0",
     "eslint-config-airbnb": "^19.0.4",
