--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,8 +6,7 @@
     "target": "es2017",
     "isolatedModules": false,
     "noEmit": false,
-    "typeRoots": ["node_modules/@types", "types"],
-    "types": ["express", "uuid"]
+    "typeRoots": ["node_modules/@types", "types"]
   },
   "include": ["server"]
 }
