--- a/package.json
+++ b/package.json
@@ -12,29 +12,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "framer-motion": "^10.16.16",
-    "next": "14.0.4",
-    "nodemon": "^3.0.2",
-    "npm-run-all": "^4.1.5",
-    "react": "^18",
-    "react-colorful": "^5.6.1",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0",
+    "express": "^4.17.3",
+    "framer-motion": "^6.3.3",
+    "next": "latest",
+    "react": "^18.2.0",
+    "react-colorful": "^5.5.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.8",
-    "react-toastify": "^9.1.3",
-    "react-use": "^17.4.3",
-    "recoil": "^0.7.7",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
-    "ts-node": "^10.9.2",
-    "uuid": "^9.0.1",
-    "ws": "^8.15.1"
+    "react-toastify": "^9.0.3",
+    "react-use": "^17.3.2",
+    "recoil": "^0.7.3-alpha.2",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.13",
     "@types/node": "17.0.4",
-    "@types/react": "^17.0.38",
+    "@types/react": "17.0.38",
     "@types/react-dom": "^18.0.4",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.0",
@@ -50,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "prettier": "^2.6.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
