change import for modalManager

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,10 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["src/*"]
     }
   },
 
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
